fixed background image in css so that it scales and covers background completely

--- a/League Workout Counter/myStyle.css
+++ b/League Workout Counter/myStyle.css
@@ -1,6 +1,11 @@
 body {
     background-image: url("http://i.gyazo.com/3ff507c31eb5f14f2b8cc5cce4998b7d.png");
-    background-color: E1E7E3;
     background-repeat:no-repeat;
     background-size: cover;
-} 
+	height:100%;
+	margin:0;
+}
+
+html {
+	height:100%;
+}
